# bitter-browser

./: Cargo.toml  PKGBUILD  bitter-browser-prompt.txt  meson.build
crates/bitter-adblock/: Cargo.toml
crates/bitter-cli/: Cargo.toml
crates/bitter-core/: Cargo.toml
crates/bitter-core/src/: bookmarks.rs  config.rs  history.rs  lib.rs  paths.rs
crates/bitter-devtools/: Cargo.toml
crates/bitter-net/: Cargo.toml
crates/bitter-ui/: Cargo.toml
crates/bitter-ui/data/: com.bitterbrowser.Browser.desktop  com.bitterbrowser.Browser.gschema.xml  com.bitterbrowser.Browser.metainfo.xml
crates/bitter-ui/src/: app.rs  main.rs  window.rs
crates/bitter-ui/src/sidebar/: mod.rs  tab_item.rs  tab_list.rs  workspace.rs
crates/bitter-ui/src/toolbar/: actions.rs  mod.rs  omnibar.rs
crates/bitter-ui/src/webview/: mod.rs  tab.rs
flatpak/: com.bitterbrowser.Browser.json
