[workspace]
members = [
    "crates/bitter-core",
    "crates/bitter-net",
    "crates/bitter-adblock",
    "crates/bitter-devtools",
    "crates/bitter-ui",
    "crates/bitter-cli"
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
authors = ["Bitter Browser Contributors"]
license = "MPL-2.0"

[workspace.dependencies]
gtk4 = { version = "0.9", features = ["v4_14"] }
libadwaita = { version = "0.7", features = ["v1_6"] }
webkit6 = { version = "0.4", features = ["v2_44"] }
tokio = { version = "1", features = ["full"] }
rusqlite = { version = "0.32", features = ["bundled", "backup", "hooks"] }
serde = { version = "1", features = ["derive"] }
toml = "0.8"
adblock = "0.9"
hickory-resolver = "0.24"
url = "2"
reqwest = { version = "0.12", features = ["rustls-tls", "brotli", "gzip"] }
regex = "1"
tracing = "0.1"
tracing-subscriber = "0.3"
prost = "0.13"
zbus = "4"
keyring = "3"
image = "0.25"
once_cell = "1"
parking_lot = "0.12"
itertools = "0.13"
