[package]
name = "bitter-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
rusqlite.workspace = true
serde.workspace = true
toml.workspace = true
url.workspace = true
tracing.workspace = true
once_cell.workspace = true
parking_lot.workspace = true
itertools.workspace = true
dirs = "5.0"
